<resources>
    <string name="app_name">WeatherBuddy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weather Buddy</string>
    <string name="nav_header_subtitle">weather.buddy@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">PROFILE</string>
    <string name="menu_Premium">PURCHASE PREMIUM FEATURES</string>
    <string name="menu_payment">PAYMENT</string>

    <string name="current_label">Current</string>
    <string name="humidity_label">Humidity 30</string>
    <string name="wind_label">Wind 4km/hr</string>
    <string name="next_4_days_hourly">Refresh for update</string>
    <string name="next_15_days_label">Next 15 Days</string>
    <string name="search_for_a_city_label">Search for a city</string>
    <string name="zero_label">0%d</string>
    <string name="wind_unit_label">%.0f km/hr</string>
    <string name="openweathermap_api_key_label">OpenWeatherMap API Key</string>
    <string name="api_key_description">For using application you should provide API key. It is free. Please open link below and create account. After that you can get API key.</string>
    <string name="get_api_key_label">Get API Key</string>
    <string name="api_key_label">API Key</string>
    <string name="english_label" translatable="false">English</string>

    <string name="search_label">Search</string>
    <string name="no_internet_message">Please check internet connection</string>
    <string name="no_city_found_message">No city found with this name</string>
    <string name="invalid_api_key_message">API key is invalid. Wait for next update</string>
    <string name="network_exception_message">Network connection problem</string>
    <string name="retry_label">Retry</string>
    <string name="position" translatable="false">position</string>
    <string name="title">Title</string>
    <string name="explore">Explore</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next Week</string>
    <string name="humidity">Humidity</string>
    <string name="next_5_days">Next 5 Days</string>
    <string name="dashboard">Dashboard</string>
    <string name="more">More</string>
    <string name="about_app">About app</string>
    <string name="search">Search</string>
    <string name="start_typing">Start typing for find your location…</string>
    <string name="about_app_full_text">Weatherapp is a simple forecast app, which uses some APIs to fetch 5 day / 3 hour forecast data from the OpenWeatherMap and to fetch places,cities,counties,coords etc. from Algolia Places. The main goal of this app is to be a sample of how to build an high quality Android application that uses the Architecture components, Dagger etc. in Kotlin.</string>
    <string name="github_url">https://github.com/furkanaskin/Weatherapp</string>
    <string name="see_on_github">See on Github</string>
    <string name="dismiss">Dismiss</string>
    <string name="unexpected_exception" />
</resources>