<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.f.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.f.myapplication.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_premium"
        android:name="com.f.myapplication.ui.premium.PremiumFragment"
        android:label="PREMIUM FEATURES"
        tools:layout="@layout/fragment_premium" />

    <fragment
        android:id="@+id/nav_payment"
        android:name="com.f.myapplication.ui.payment.PaymentFragment"
        android:label="@string/menu_payment"
        tools:layout="@layout/payment_fragment" />
</navigation>