<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="80dp"

    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/current_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/material_blue"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/todayMaterialCard"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="336dp"
            android:layout_marginStart="@dimen/spacing_mlarge"
            android:layout_marginEnd="@dimen/spacing_mlarge"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/material_blue"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/spacing_medium">

                <TextView
                    android:id="@+id/temp_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    style="@style/TextViewInColoredCard"
                    android:text="Temp 20deg"

                    android:layoutDirection="ltr" />

                <TextView
                    android:id="@+id/description_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_large"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="43dp"
                            android:orientation="horizontal"
                            android:padding="@dimen/spacing_middle">


                            <TextView
                                android:id="@+id/txtskystatus"
                                style="@style/TextViewInColoredCard"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="sky status"
                                android:textSize="20dp"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="@dimen/spacing_medium"
                                android:layout_height="0dp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="@dimen/spacing_middle">

                            <TextView
                                android:id="@+id/humidity_text_view"
                                style="@style/TextViewInColoredCard"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textSize="20dp"
                                android:text="@string/wind_label"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="@dimen/spacing_medium"
                                android:layout_height="0dp" />



                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="@dimen/spacing_middle">

                            <TextView
                                android:id="@+id/txtpressure"
                                style="@style/TextViewInColoredCard"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textSize="20dp"
                                android:text="pressure"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="@dimen/spacing_medium"
                                android:layout_height="0dp" />



                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="@dimen/spacing_middle">

                            <TextView
                                android:id="@+id/windspeed"
                                style="@style/TextViewInColoredCard"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textSize="20dp"
                                android:text="windspeed"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="@dimen/spacing_medium"
                                android:layout_height="0dp" />



                        </LinearLayout>


                    </LinearLayout>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtCityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    style="@style/TextViewInColoredCard"
                    android:layout_marginTop="20dp"
                    android:text="City Name, Country Name" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/descView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    style="@style/TextViewInColoredCard"
                    android:text="Description here"
                    android:layout_gravity="center"
                    android:textSize="15dp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewCloud"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_mostly_cloudy" />




        </com.google.android.material.card.MaterialCardView>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"

            android:orientation="horizontal">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Latitude"
    android:textStyle="bold">

</TextView>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/latView"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:padding="2dip"
                android:text="22.777"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Longitude"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/longView"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:padding="2dip"
                android:text="28.777"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_mlarge"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="198dp"
                android:layout_height="49dp"
                android:text="@string/next_4_days_hourly"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
